--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.0.5
+==================================================
+- Implement marketing system
+
 Version 0.0.3
 ==================================================
 - Add license file
